# am_ai_auditors

./: pyproject.toml
aia/: README.md  pyproject.toml
aia/src/aia/: crew.py  main.py
am_audit_crew/: README.md  pyproject.toml
am_audit_crew/src/am_audit_crew/: DraftAuditReport.md  crew.py  main.py
am_audit_crew/src/am_audit_crew/config/: agents.yaml  tasks.yaml
am_audit_crew/src/am_audit_crew/data/: access_report.csv  audit_trail.csv  change_tickets.csv  limit_authorization.csv  transaction_logs.csv  transaction_records.csv
am_audit_crew/src/am_audit_crew/findings/: AuditTrailObservation.md  LogicalAccessObservation.md  TransactionsComplianceObservation.md  TransactionsLimitsObservation.md
am_audit_crew/src/am_audit_crew/output/: DS-two-agent-v0.odt  DS.odt  DS_LOCAL.odt  LLAMA3.2.odt  prompt-access.odt
am_audit_crew/src/am_audit_crew/output/10-feb/: 10-feb-simple-tasks.odt
am_audit_crew/src/am_audit_crew/output/21-Feb/: otw.odt
am_audit_crew/src/am_audit_crew/output/21-gtg/: DraftAuditReport.md  gtg.odt
am_audit_crew/src/am_audit_crew/output/detailed-20-feb/: 10-feb-detailed-tasks.odt
am_audit_crew/src/am_audit_crew/output/v0/: DraftAuditReport.md  log.odt
am_audit_crew/src/am_audit_crew/output/v1/: DraftAuditReport.md  v1.odt
am_audit_crew/src/am_audit_crew/output/v2/: v2.odt  (+1 more)
am_audit_crew/src/am_audit_crew/tools/: access_review.py  access_review.py.old  access_review_logic.py.old  change_management_verification.py  transaction_approval_review.py  transaction_policy_review copy.py.old  transaction_policy_review.py  transaction_policy_review.py_candidate-used
(+20 files in other folders)
