[project]
name = "aia"
version = "0.1.0"
description = "aia using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
aia = "aia.main:run"
run_crew = "aia.main:run"
train = "aia.main:train"
replay = "aia.main:replay"
test = "aia.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
