[project]
name = "am_audit_crew"
version = "0.1.0"
description = "am_audit_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
am_audit_crew = "am_audit_crew.main:run"
run_crew = "am_audit_crew.main:run"
train = "am_audit_crew.main:train"
replay = "am_audit_crew.main:replay"
test = "am_audit_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
